# GraduationDesign

./: README.md  io.py  preprocess_data.py  test.py  test_ada.py
adaboost/: __init__.py  adaboost.py
cart/: __init__.py  cart.py
ev_face/: CMakeLists.txt  main.cpp  spider.py
ev_face/ev_face_cmd/ev_face_cmd/: main.cpp
ev_face/ev_face_cmd/ev_face_cmd.xcodeproj/: project.pbxproj
ev_face/ev_face_cmd/ev_face_cmd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ev_face/ev_face_cmd/ev_face_cmd.xcodeproj/project.xcworkspace/xcuserdata/rzyang.xcuserdatad/: UserInterfaceState.xcuserstate
ev_face/ev_face_cmd/ev_face_cmd.xcodeproj/xcuserdata/rzyang.xcuserdatad/xcschemes/: ev_face_cmd.xcscheme  xcschememanagement.plist
ev_face/gui_version/build-ev_face-Desktop_Qt_5_6_2_GCC_64bit-Debug/: Makefile  ev_face  moc_mainwindow.cpp  ui_mainwindow.h
ev_face/gui_version/ev_face/: ev_face.pro  ev_face.pro.user.12ebe48  mainwindow.cpp  mainwindow.h  mainwindow.ui
ev_face/gui_version/ev_face/lib/: libseeta_fa_lib.dylib  libseeta_facedet_lib.dylib  libviplnet.so.4.5
ev_face/gui_version/log/: log_info_20170411-193350.22417  log_info_20170411-193501.22555  log_info_20170411-193557.22614  log_info_20170411-195956.23811  log_info_20170411-200221.23932  log_info_20170411-200436.24128  log_info_20170411-201052.24333  log_info_20170411-201136.24403
ev_face/include/: Cap_Controller.h  Cap_Controller.hpp  Seetaface.hpp  seetaface.h
ev_face/python_scripts/: get_label_map.py  get_labels.py  spider.py  split_dataset.py
ev_face/shell_scripts/: gen_test_lmdb.sh  gen_train_lmdb.sh  train.sh
ev_face/src/: Cap_Controller.cpp
face_detection/opencv_impl/: demo.py
haar/: __init__.py  haar.py
mymath/: __init__.py  mymath.py
neural_network/: test.py
neural_network/CompNode/: CompNode.py  __init__.py
neural_network/Layers/: Layer.py  __init__.py
neural_network/Neurons/: Neuron.py  __init__.py
neural_network/Operator/: .Operator.py.swp  Operator.py  __init__.py
neural_network/Operators/: Operator.py  __init__.py
toy_dataset/pos/: s1_1.pgm  s1_2.pgm  s1_3.pgm  s1_4.pgm  s1_5.pgm  s1_6.pgm  s1_7.pgm
